--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <nav>
-    <img id="logo" src="Ativo 5 1.svg" alt="">
+    <a href="https://ichvitor.github.io/tia-rosa/"> <img id="logo" src="Ativo 5 1.svg" alt="logo" link="https://ichvitor.github.io/tia-rosa/"></a>
     <a href="#contato" class="botao">Contato</a>
     <a href="#comidas" class="botao">Comidas</a>
     <a href="#coffee" class="botao">Cafés</a>
   </nav>
 
   <div id="banner_div">
-    <img src="imagens/banner.jpg" class="banner" alt="">
+    <img src="imagens/banner.jpg" class="banner" alt="banner">
   </div>
 
   <section id="cafes" class="cafezinho">
