--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tia Rosa Coffee Shop</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="Ativo 5 1.svg" type="image/x-icon">
 
 </head>
 
